Add test threads and users with newly create directory structure

--- a/thread/--name/rne-lorem-ipsum/index.html
+++ b/thread/--name/rne-lorem-ipsum/index.html
@@ -12,10 +12,8 @@
 </div>
 <article class="Thread">
 <div class="Widget-before-contents">
-<h1>Main Page</h1>
+<h1>R&amp;E Intro &amp; Lorem Ipsum</h1>
 <span class="Thread-block-info">1 stub</span>
-<span class="Thread-block-info"><a href="/user/--name/eon">eon</a> assigned this article as the main page</span>
-<p>R&amp;E Intro &amp; Lorem Ipsum</p>
 </div>
 <div class="Widget-contents">
 <span class="Thread-block-info">original text: <a href="/user/--name/eon">eon</a> wrote</span>
@@ -29,7 +27,7 @@
 <p>auto generated material of lipsum.com.</p>
 </div>
 <div class="Widget-after-contents">
-<a href="/thread/--name/rne-lorem-ipsum">Go to original thread</a>
+No comments
 </div>
 </article>
 <div class="Widget-bottom">
